Fixed Firefox issue where flexbox and padding ratio hack conflict. https://stackoverflow.com/questions/33502702/flex-elements-ignore-percent-padding-in-firefox

--- a/assets/sass/components/Card.scss
+++ b/assets/sass/components/Card.scss
@@ -12,10 +12,8 @@
 
 }
 
-.Card-header {
-  position:    relative;
-  height:      0;
-  padding-top: 56.25%;
+.Card-imageWrap {
+  @extend %ratio-image-16x9; // Sets @include object-fit(cover)
 }
 
 .Card-image {
