--- a/assets/sass/components/Card2.scss
+++ b/assets/sass/components/Card2.scss
@@ -17,7 +17,7 @@
 
 }
 
-.Card2-header {
+.Card2-imageWrap {
   @extend %ratio-image-16x9; // Sets @include object-fit(cover)
 }
 
